.lzy-link: avoid line breaks in blanks (white-space: nowrap)

--- a/css/scss/lizzy_basics.scss
+++ b/css/scss/lizzy_basics.scss
@@ -883,6 +883,7 @@ nav li {
 /* === Links =========================================== */
 .lzy-link {
 	position: relative;
+	white-space: nowrap;
 	padding-left: 1.4em;
 }
 .lzy-link:before {
